# simple-evals

./: README.md  pyproject.toml
src/simple_evals/: __init__.py  common.py  mmlu_eval.py  run.py
src/simple_evals/sampler/: chat_completion_ollama_sampler.py  chat_completion_sampler.py  claude_sampler.py  o1_chat_completion_sampler.py
