[project]
name = "simple-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.9",
    "pandas>=2.2.3",
    "tqdm>=4.66.5",
    "blobfile>=3.0.0",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
    "openai>=1.51.2",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
